# RickRollOS

./: Cargo.toml  README.md
.cargo/: config
src/: main.rs  vga_buffer.rs
